# scout_ros

./: README-ZH.md  README.md
scout_base/: CMakeLists.txt  package.xml
scout_base/include/scout_base/: scout_messenger.hpp  scout_params.hpp
scout_base/launch/: display_model.launch  display_model.launch.py  scout_base.launch  scout_base.launch.py  scout_mini_base.launch  scout_mini_base.launch.py
scout_base/src/: scout_base_node.cpp  scout_messenger.cpp
scout_bringup/: CMakeLists.txt  package.xml
scout_description/: CMakeLists.txt  package.xml
scout_description/launch/: description.launch.py
scout_description/sample/: scout_v2_nav.xacro
scout_description/urdf/: scout_v2.xacro  scout_wheel_type1.xacro
scout_msgs/: CMakeLists.txt  package.xml
scout_msgs/msg/: ScoutBmsStatus.msg  ScoutStatus.msg
