<?xml version="1.0"?>
<package format="2">
  <name>scout_base</name>
  <version>0.3.3</version>
  <description>AgileX Scout robot driver</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="info@westonrobot.com">WestonRobot</maintainer>

  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>scout_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ugv_sdk</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
